syntax = "proto3";

package salesadmin;
option go_package = "salesadminpb";

message File {
  string file_name = 1;
  repeated bytes file_bytes = 2;
}

message FileUploadRequest {
    File file = 1;
}

message FileUploadResponse { bool result = 1; }

service SalesAdminService {
  rpc FileUpload(FileUploadRequest) returns (FileUploadResponse) {};
}